# Final-Project-CSC10002

./: .gitignore  CMakeLists.txt  Design-Console.txt  README.md  consoleView.cpp  consoleView.h  consoleView.hpp  mainpage.cpp  mainpage.h  mainpage.ui  t  ui_mainpage.h
Create data/: createAccount.cpp  createAccount.hpp  main.cpp
Data/2021-2022/: Semester.txt  (+1 more)
LinkedList_demo/: LinkedList.h  main_test.cpp  student.h
Source Code/: LinkedList.hpp  NodeFunction.cpp  course.hpp  header.hpp
Source Code ( Tien)/: Function21.cpp  header.h
Source Code (Dang)/: AccountList.hpp  Beginning_school_year.cpp  Function21.cpp  LinkedList.hpp  User.cpp  User.hpp  header.hpp  student.hpp
SourceCode/: Beginning_school_year.cpp  Beginning_school_year.hpp  GeneralClass.cpp  GeneralClass.hpp  LinkedList.hpp  NodeFunction.cpp  Staff.cpp  Staff.hpp  Student_in_class.cpp  Student_in_class.hpp  User.cpp  User.hpp  View_generalclass.cpp  consoleView.cpp  consoleView.h  consoleView.hpp  course.cpp  course.hpp  createAccount.cpp  createAccount.hpp  generalClass.cpp  generalClass.hpp  header.hpp  main.cpp  main_demo.cpp  main_menu.cpp  main_menu.hpp  main_menu_staff.cpp  schoolyear.cpp  schoolyear.hpp  schoolyear_test.cpp  schoolyear_test.hpp  score.cpp  score.hpp  semester.cpp  semester.hpp  student.cpp  student.hpp  studentControl.cpp  studentControl.hpp  (+7 more)
my_sfml_project/: CMakeLists.txt  User.cpp  User.hpp  consoleView.cpp  course.cpp  course.hpp  createAccount.cpp  main  main copy.cpp  main.cpp  schoolyear.cpp  schoolyear.hpp  score.cpp  score.hpp  semester.cpp  student.cpp  student.hpp
(+219 files in other folders)
